--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -3,7 +3,7 @@
     <head>
         <title>Home</title>
         <link rel="manifest" href="manifest" />
-        {% if session and session.username="KingLele" %}
+        {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
         {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
