--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -18,6 +18,19 @@
                         font-family: Verdana, sans-serif;
                     }
                     {% endif %}
+                    .login_button {
+                        padding: 0px;
+                        text-decoration: none;
+                        color: black;
+                        background: none;
+                        border-style: solid;
+                        border-radius: 4px;
+                        border-color: darkgray;
+                        border-width: 2px;
+                        cursor: pointer;
+                        font-size: 16px;
+                        font-family: serif;
+                    }
                     #home-content {
                         text-align: center;
                         border-style: solid;
