--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -10,6 +10,19 @@
     </head>
     <body>
         <style>
+            .login_button {
+                padding: 0px;
+                text-decoration: none;
+                color: black;
+                background: none;
+                border-style: solid;
+                border-radius: 4px;
+                border-color: darkgray;
+                border-width: 2px;
+                cursor: pointer;
+                font-size: 16px;
+                font-family: serif;
+            }
             .signup-box {
                 display: grid;
                 justify-content: center;
