--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -19,7 +19,6 @@
                     }
                     {% endif %}
                     .login_button {
-                        padding: 0px;
                         text-decoration: none;
                         color: black;
                         background: none;
@@ -30,6 +29,9 @@
                         cursor: pointer;
                         font-size: 16px;
                         font-family: serif;
+                        padding: 1px;
+                        line-height: 18px;
+                        user-select: none;
                     }
                     #home-content {
                         text-align: center;
