--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -20,9 +20,7 @@
                         font-family: Verdana, sans-serif;
                     }
                     {% endif %}
-                    
                     .login_button {
-                        padding: 0px;
                         text-decoration: none;
                         color: black;
                         background: none;
@@ -33,6 +31,9 @@
                         cursor: pointer;
                         font-size: 16px;
                         font-family: serif;
+                        padding: 1px;
+                        line-height: 18px;
+                        user-select: none;
                     }
                     #home-content {
                         text-align: center;
