--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -11,7 +11,6 @@
     <body>
         <style>
             .login_button {
-                padding: 0px;
                 text-decoration: none;
                 color: black;
                 background: none;
@@ -22,6 +21,9 @@
                 cursor: pointer;
                 font-size: 16px;
                 font-family: serif;
+                padding: 1px;
+                line-height: 18px;
+                user-select: none;
             }
             .signup-box {
                 display: grid;
