--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -23,9 +23,9 @@
                 </style>
                 {% endif %}
                 <p>Eingeloggt als {{ session.username }}.</p>
-                <button class="login_button" id="logout-button">Ausloggen</button>
-                <a href="{{ url_for('control_panel') }}"><button class="login_button" type="button">Kontrollpanel</button></a>
-                <a class="login_button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
+                <button class="login-button" id="logout-button">Ausloggen</button>
+                <a href="{{ url_for('control_panel') }}"><button class="login-button" type="button">Kontrollpanel</button></a>
+                <a class="login-button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
