--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -18,7 +18,7 @@
                     <input type="text" id="username" name="username" required>
                     <label for="password">Passwort:</label>
                     <input type="password" id="password" name="password" required>
-                    <button class="login_button" type="submit">Senden</button>
+                    <button class="login-button" type="submit">Senden</button>
                     <p style="visibility: hidden;" id="message"></p>
                 </form>
             </div>
