--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -5,7 +5,7 @@
         <title>
         Kontrollpanel
         </title>
-        <link rel="stylesheet" href="{{ url_for('get_style_control_panel') }}" />
+        <link rel="stylesheet" href="/static/controlpanelstyle.css/" />
         {{ boxedSections.sectionHead() }}
         <link rel="manifest" href="manifest" />
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
