--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -3,7 +3,7 @@
     <head>
         <title>Register</title>
         <link rel="manifest" href="manifest" />
-        <link rel="stylesheet" href="{{ url_for('get_style_register') }}" />
+        <link rel="stylesheet" href="/static/registerstyle.css/" />
         {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
         {% endif %}
