--- a/api/static/homestyle.css
+++ b/api/static/homestyle.css
@@ -8,7 +8,7 @@
     border-width: 2px;
     cursor: pointer;
     font-size: 16px;
-    font-family: serif;
+    font-family: unset;
     padding: 1px;
     line-height: 18px;
     user-select: none;
