--- a/api/static/controlpanelstyle.css
+++ b/api/static/controlpanelstyle.css
@@ -8,7 +8,7 @@
     border-width: 2px;
     cursor: pointer;
     font-size: 16px;
-    font-family: unset;
+    font-family: initial;
     padding: 1px;
     line-height: 18px;
     user-select: none;
