--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -4,9 +4,7 @@
         <title>Home</title>
         <link rel="manifest" href="manifest" />
         <link rel="stylesheet" href="/static/homestyle.css/" />
-        {% if session and session.username == "KingLele" %}
-        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
-        {% endif %}
+        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--improve login text box styling-->
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
