--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -18,18 +18,29 @@
         margin-top: 16px;
         margin-bottom: 0;
     }
+    /* center div.centerer content */
+    .centerer {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 80%;
+    }
 </style>
 <div class="login-box">
     <div id="login-content">
-        <h2>Einloggen</h2>
-        <form>
-            <label for="username">Nutzername:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Passwort:</label>
-            <input type="password" id="password" name="password" required>
-            <button type="submit">Einloggen</button>
-            <p style="visibility: hidden;" id="message"></p>
-        </form>
+        <div class="centerer">
+            <h2>Einloggen</h2>
+            <form>
+                <label for="username">Nutzername:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Passwort:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Einloggen</button>
+                <p style="visibility: hidden;" id="message"></p>
+            </form>
+        </div>
     </div>
     <script>
         {% include 'loginCode.js' %}
