--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -37,7 +37,7 @@
                 <input type="text" id="username" name="username" required>
                 <label for="password">Passwort:</label>
                 <input type="password" id="password" name="password" required>
-                <button type="submit">Einloggen</button>
+                <button type="submit" class="login_button">Einloggen</button>
                 <p style="visibility: hidden;" id="message"></p>
             </form>
         </div>
