--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -22,7 +22,7 @@
                     }
                 </style>
                 {% endif %}
-                <a href="{{ url_for('home') }}"><button class="login_button" type="button">Zurück zum Hauptmenu</button></a>
+                <a href="{{ url_for('home') }}"><button class="login_button" type="button">Zurück zum Hauptmenü</button></a>
                 <script>
                     const ownSettings = {{ session.settings.value }};
                     const ownPgroup = {{ session.permission_group }};
