--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -4,23 +4,34 @@
         <title>Register</title>
         <link rel="manifest" href="manifest" />
         <link rel="stylesheet" href="/static/registerstyle.css/" />
-        {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
-        {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
+        <style>
+            /* center div.centerer content */
+            .centerer {
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 80%;
+            }
+        </style>
         <div class="signup-box">
             <div id="signup-content">
-                <h2>Registrieren</h2>
-                <form>
-                    <label for="username">Nutzername:</label>
-                    <input type="text" id="username" name="username" required>
-                    <label for="password">Passwort:</label>
-                    <input type="password" id="password" name="password" required>
-                    <button class="login_button" type="submit">Senden</button>
-                    <p style="visibility: hidden;" id="message"></p>
-                </form>
+                <div class="centerer">
+                    <h2>Registrieren</h2>
+                    <form>
+                        <label for="username">Nutzername:</label>
+                        <input type="text" id="username" name="username" required>
+                        <label for="password">Passwort:</label>
+                        <input type="password" id="password" name="password" required>
+                        <button class="login_button" type="submit">Senden</button>
+                        <p style="visibility: hidden;" id="message"></p>
+                    </form>
+                </div>
             </div>
             <script>
                 {% include 'registerCode.js' %}
