--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,6 +1,6 @@
 <style>
     .login-box {
-        display: grid;
+        display: flex;
         justify-content: center;
     }
     #login-content {
