--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -8,6 +8,7 @@
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit" class="login_button">Einloggen</button>
+            <button type="button" class="test-button">Test</button>
             <p style="visibility: hidden;" id="message"></p>
         </form>
     </div>
