--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -33,5 +33,6 @@
                 {% endif %}
             </div>
         </div>
+        <img src="/static/images/amtsübersicht.png/" alt="Amtsübersicht.png">
     </body>
 </html>
