--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -32,7 +32,7 @@
                 </script>
                 {% endif %}
             </div>
-            <img src="/static/images/amtsübersicht.png/" alt="Amtsübersicht.png">
+            <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
         </div>
     </body>
 </html>
