--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -27,6 +27,10 @@
     display: grid;
     justify-content: center;
 }
+#img-container {
+    display: grid;
+    justify-content: center;
+}
 
 input {
     border-color: darkgray;
