--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -32,6 +32,8 @@
                 </script>
                 {% endif %}
             </div>
+        </div>
+        <div id="img-container">
             <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
         </div>
     </body>
