--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,4 +1,9 @@
 <script src="https://unpkg.com/@simplewebauthn/browser/dist/bundle/index.umd.min.js"></script>
+<style>
+    html {
+        font-family: Verdana, sans-serif;
+    }
+</style>
 <div class="login-box">
     <div id="login-content">
         <h2>Einloggen</h2>
@@ -7,7 +12,7 @@
             <input type="text" id="username" name="username" required>
             <label for="password">Passwort:</label>
             <input type="password" id="password" name="password" required>
-            <button type="submit" class="login_button">Einloggen</button>
+            <button type="submit" class="login_button" style="margin-top: 4px;">Einloggen</button>
             <p style="visibility: hidden;" id="message"></p>
         </form>
     </div>
