show image only when wanted

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -38,8 +38,11 @@
                 {% endif %}
             </div>
         </div>
-        <div id="img-container">
-            <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
-        </div>
+        <details>
+            <summary>Abteilungs-Übersicht</summary>
+            <div id="img-container">
+                <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
+            </div>
+        </details>
     </body>
 </html>
