--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -25,24 +25,21 @@
                 {% endif %}
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <button class="login_button" id="logout-button">Ausloggen</button>
-                <script>
-                    function goToControlPanel() {
-                        window.location = "{{ url_for('control_panel') }}";
-                    }
-                </script>
-                <button class="login_button" type="button" onclick="goToControlPanel()">Kontrollpanel</button>
-                <button class="login_button" onclick="window.location = 'https://leanderkafemann.github.io/LK-Regeln/';">Abstimmungsregeln</button>
+                <a class="login_button" href="{{ url_for('control_panel') }}">Kontrollpanel</a>
+                <a class="login_button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
                 {% endif %}
             </div>
         </div>
+        {% if session %}
         <details>
             <summary>Abteilungs-Übersicht</summary>
             <div id="img-container">
                 <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
             </div>
         </details>
+        {% endif %}
     </body>
 </html>
