--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -1,4 +1,9 @@
+.login_button:hover {
+    background-color: rgb(230, 230, 230);
+}
+
 .login_button {
+    transition: background-color 0.5s;
     text-decoration: none;
     color: black;
     background: none;
@@ -39,10 +44,6 @@ input {
     border-radius: 4px;
     margin-top: 2px;
     margin-bottom: 2px;
-    width: 80%;
-}
-input :hover {
-    width: 95%;
 }
 .login-box {
     display: flex;
