improve paths for non-Firefox browser support

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="manifest" href="manifest" />
-        <link rel="stylesheet" href="/static/home_style.css/" />
+        <link rel="manifest" href="./manifest" />
+        <link rel="stylesheet" href="./static/home_style.css/" />
         {% if session and session.username == "KingLele" %}
-        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--different login text box styling-->
+        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--better button styling-->
         {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
-        <script src="/static/common.js/"></script>
+        <script src="./static/common.js/"></script>
     </head>
     <body>
         <div id="container">
@@ -16,13 +16,11 @@
                 {% if not session %}
                 {% include 'login.html' %}  
                 {% else %}
-                {% if session.username == "KingLele" %}
                 <style>
                     html {
                         font-family: Verdana, sans-serif;
                     }
                 </style>
-                {% endif %}
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <button class="login_button" id="logout-button">Ausloggen</button>
                 <script>
@@ -41,7 +39,7 @@
         <details>
             <summary>Abteilungs-Übersicht</summary>
             <div id="img-container">
-                <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
+                <img src="./static/images/amtsübersicht.png" alt="Amtsübersicht.png">
             </div>
         </details>
     </body>
