--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -36,11 +36,13 @@
                 {% endif %}
             </div>
         </div>
-        <details>
-            <summary>Abteilungs-Übersicht</summary>
-            <div id="img-container">
-                <img src="./static/images/amtsübersicht.png" alt="Amtsübersicht.png">
-            </div>
-        </details>
+        <div class="centerer">
+            <details>
+                <summary>Abteilungs-Übersicht</summary>
+                <div id="img-container">
+                    <img src="./static/images/amtsübersicht.png" alt="Amtsübersicht.png">
+                </div>
+            </details>
+        </div>
     </body>
 </html>
