--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -34,12 +34,12 @@
             </div>
         </div>
         {% if session %}
-        <details>
-            <summary>Abteilungs-Übersicht</summary>
-            <div id="img-container">
+        <div id="img-container">
+            <details open="">
+                <summary>Abteilungs-Übersicht</summary>
                 <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
-            </div>
-        </details>
+            </details>
+        </div>
         {% endif %}
     </body>
 </html>
