close details section by default

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -31,7 +31,7 @@
         </div>
         {% if session %}
         <div id="img-container">
-            <details open="">
+            <details>
                 <summary>Abteilungs-Übersicht</summary>
                 <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
             </details>
