fix another hovering issue

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -21,7 +21,12 @@
                 </style>
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <button class="login_button" id="logout-button">Ausloggen</button>
-                <a class="login_button" href="{{ url_for('control_panel') }}">Kontrollpanel</a>
+                <script>
+                    function goToControlPanel() {
+                        window.location.href = "{{ url_for('control_panel') }}";
+                    }
+                </script>
+                <button class="login_button" onclick="goToControlPanel()">Kontrollpanel</button>
                 <button class="login_button" onclick="window.location='https://leanderkafemann.github.io/LK-Regeln/'">Abstimmungsregeln</button>
                 <script>
                     {% include 'homeCode.js' %}
