--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -37,7 +37,7 @@
         {% if session %}
         <div id="img-container">
             <details>
-                <summary>Abteilungs-Übersicht</summary>
+                <summary style="text-align: center;">Abteilungs-Übersicht</summary>
                 <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
             </details>
         </div>
