--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="manifest" href="./manifest" />
-        <link rel="stylesheet" href="./static/home_style.css/" />
-        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--better button styling-->
+        <link rel="manifest" href="/manifest" />
+        <link rel="stylesheet" href="/static/home_style.css/" />
+        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--arguably worse button styling-->
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
-        <script src="./static/common.js/"></script>
+        <script src="/static/common.js/"></script>
     </head>
     <body>
         <div id="container">
