remove destructive comment

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -4,7 +4,7 @@
         <title>Home</title>
         <link rel="manifest" href="/manifest" />
         <link rel="stylesheet" href="/static/home_style.css/" />
-        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--arguably worse button styling-->
+        <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--hover effect and more for buttons-->
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
         <script src="/static/common.js/"></script>
     </head>
