center login textboxes

--- a/api/static/home_style.css
+++ b/api/static/home_style.css
@@ -53,7 +53,7 @@ input {
 #login-content {
     padding: 8px;
     width: min-content;
-    justify-self: right;
+    justify-self: center;
 }
 #login-content h2 {
     margin: 0;
