--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -4,7 +4,9 @@
         <title>Home</title>
         <link rel="manifest" href="/manifest" />
         <link rel="stylesheet" href="/static/home_style.css/" />
+        {% if session and session.username == "KingLele" %}
         <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" /> <!--arguably worse button styling-->
+        {% endif %}
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
         <script src="/static/common.js/"></script>
     </head>
@@ -21,13 +23,8 @@
                 </style>
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <button class="login_button" id="logout-button">Ausloggen</button>
-                <script>
-                    function goToControlPanel() {
-                        window.location.href = "{{ url_for('control_panel') }}";
-                    }
-                </script>
-                <button class="login_button" onclick="goToControlPanel()">Kontrollpanel</button>
-                <button class="login_button" onclick="window.location='https://leanderkafemann.github.io/LK-Regeln/'">Abstimmungsregeln</button>
+                <a class="login_button" href="{{ url_for('control_panel') }})">Kontrollpanel</a>
+                <a class="login_button" href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
