fix weird button size issue

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -27,7 +27,7 @@
                     }
                 </script>
                 <button class="login_button" onclick="goToControlPanel()">Kontrollpanel</button>
-                <button class="login_button" onclick="window.location='https://leanderkafemann.github.io/LK-Regeln/'">Abstimmungsregeln</button>
+                <button class="login_button" onclick="window.location='https://leanderkafemann.github.io/LK-Regeln/'" style="width: fit-content;">Abstimmungsregeln</button>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
