--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -9,6 +9,7 @@
     {{ boxedSections.sectionHead() }}
     <link rel="manifest" href="manifest" />
     <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
+    <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
     <script src="/static/common.js/"></script>
 </head>
     <body>
@@ -101,7 +102,7 @@
                     </tr>
                 </template>
                 <template id="user-table-option-button-template">
-                    <button class="login_button" type="button" class="user-table-option-button"></button>
+                    <button class="login_button" type="button"></button>
                 </template>
                 <script>
                     {% include 'userList.js' %}
