--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -30,7 +30,7 @@
         <div id="img-container">
             <details>
                 <summary style="text-align: center;">Abteilungs-Übersicht</summary>
-                <img src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
+                <img  style="width: 60%; height: 40%;" src="/static/images/amtsübersicht.png" alt="Amtsübersicht.png">
             </details>
         </div>
         {% endif %}
