--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -21,7 +21,7 @@
                     }
                 </style>
                 {% endif %}
-                <a href="{{ url_for('home') }}"><button class="login_button" type="button">Zurück zum Hauptmenü</button></a>
+                <div><a href="{{ url_for('home') }}" class="login_button">Zurück zum Hauptmenü</a></div>
                 <script>
                     const ownSettings = {{ session.settings.value }};
                     const ownPgroup = {{ session.permission_group }};
