--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -22,7 +22,7 @@
                 {% else %}
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <hr>
-                <button class="login_button" id="logout-button">>Ausloggen <span class="material-symbols-outlined">logout</span></button>
+                <button class="login_button" id="logout-button">Ausloggen <span class="material-symbols-outlined">logout</span></button>
                 {% if session.username == "KingLele" %}
                 <script>
                     function goToControlPanel() {
