--- a/api/static/controlpanel_style.css
+++ b/api/static/controlpanel_style.css
@@ -36,7 +36,7 @@ body {
     transition: background-color 0.5s;
     text-decoration: none;
     background-color: var(--button-background-color);
-    border-style: none;
+    border: black solid 1px;
     border-radius: 17px;
     cursor: pointer;
     font-size: 16px;
