fix invalid path error

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="manifest" href="/manifest" />
+        <link rel="manifest" href="/manifest.json" />
         <link rel="stylesheet" href="/static/home_style.css/" />
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
         <script src="/static/common.js/"></script>
